@@ -255,7 +255,10 @@ class info implements pts_option_interface
 				if(count($test_titles) > 0)
 				{
 					echo PHP_EOL . pts_client::cli_just_bold('Contained Tests:') . PHP_EOL;
-					echo pts_user_io::display_text_list(array_unique($test_titles));
+					$tt = array_unique($test_titles);
+					sort($tt);
+					echo pts_user_io::display_text_list($tt);
+					echo '  ' . pts_client::cli_just_italic(pts_strings::plural_handler(count($tt), 'Distinct Test Profiles')) . PHP_EOL;
 					echo '  ' . pts_client::cli_just_italic(pts_strings::plural_handler($o->get_test_count(), 'Test')) . PHP_EOL;
 					echo '  ' . pts_client::cli_just_italic(pts_strings::plural_handler($o->get_qualified_test_count(), 'Qualified Test')) . PHP_EOL;
 				}
